--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -42,6 +42,7 @@ body {
 
 .main-header {
   height: calc(var(--base-size) * 4);
+  border-bottom: 1px solid rgb(var(--foreground-rgb) / .1);
 }
 
 .header-logotype {
@@ -109,6 +110,10 @@ body {
       overflow: hidden;
       border-radius: var(--btn-border-radius);
       border: .1rem solid rgb(var(--background-end-rgb) / .1);
+  }
+
+  & > nav > ul li a {
+    transition: background var(--smooth);
   }
 
   & > nav > ul li:not(:last-child) {
