--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -40,6 +40,11 @@ body {
   height: auto;
 }
 
+.openweather-icon {
+  background-color: rgb(var(--foreground-rgb) / .2);
+  border-radius: 50%;
+}
+
 #burger {
   position: relative;
 
