--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,7 +7,7 @@
   --foreground-rgb: 255 255 255;
   --background-rgb: 0 0 0;
   --foreground-opaque: 51 51 51;
-  --box-shadow: 0 0 8px rgb(var(--foreground-rgb) / .15);
+  --box-shadow: 0 0 4px rgb(var(--foreground-rgb) / .15);
   --thin-line: rgb(var(--foreground-rgb) / .2);
   
   /* ==========================| SIZES |========================== */
@@ -83,8 +83,7 @@ body {
     width: auto;
     height: var(--base-size);
     fill: var(--background-rgb);
-    stroke: var(--thin-line);
-    stroke-width: 1px;
+    filter: drop-shadow(0px -2px 2px rgb(255 255 255 / .15));
     z-index: 6;
   }
 
