chore(menu): improve openweather display

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -45,6 +45,10 @@ body {
   border-radius: 50%;
 }
 
+.openweather-container {
+  font-size: calc(var(--base-size) * .8);
+}
+
 #burger {
   position: relative;
 
