--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,11 +4,24 @@
 
 :root {
   /* ==========================| COLORS |========================== */
-  --foreground-rgb: 255 255 255;
-  --background-rgb: 0 0 0;
-  --foreground-opaque: 51 51 51;
-  --box-shadow: 0 0 4px rgb(var(--foreground-rgb) / .15);
-  --thin-line: rgb(var(--foreground-rgb) / .2);
+  --primary-default: 136 22 0;
+  --primary-content: 255 255 255;
+  --primary-alt: 112 20 1;
+
+  --secondary-default: 27 227 106;
+  --secondary-content: 0 0 0;
+  --secondary-alt: 199 199 96;
+
+  --alert-default: 203 255 140;
+  --alert-content: 0 0 0;
+  --alert-alt: 184 230 128;
+  
+  --foreground: 255 255 255;
+  --background: 0 0 0;
+  --background-alt: 0 19 41;
+
+  --box-shadow: 0 0 4px rgb(var(--foreground) / .15);
+  --foreground-20-percent: rgb(var(--foreground) / .2);
   
   /* ==========================| SIZES |========================== */
   --base-size: clamp(14px, 2vw, 16px);
@@ -21,8 +34,8 @@
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: url(https://dominiquetalis.com/images/stars.svg), radial-gradient(#001329, rgb(var(--background-rgb)));
+  color: rgb(var(--foreground));
+  background: url(https://dominiquetalis.com/images/stars.svg), radial-gradient(rgb(var(--background-alt)), rgb(var(--background)));
   min-height: 100vh;
 }
 
@@ -33,7 +46,7 @@ body {
 
 .main-header {
   height: calc(var(--base-size) * 4);
-  border-bottom: 1px solid var(--thin-line);
+  border-bottom: 1px solid var(--foreground-20-percent);
 }
 
 .header-logotype {
@@ -42,7 +55,7 @@ body {
 }
 
 .openweather-icon {
-  background-color: rgb(var(--foreground-rgb) / .2);
+  background-color: rgb(var(--foreground) / .2);
   border-radius: 50%;
 }
 
@@ -62,7 +75,7 @@ body {
     padding: calc(var(--base-size) * .3125);
 
     & > span {
-      background: rgb(var(--foreground-rgb));
+      background: rgb(var(--foreground));
       height: 1px;
       width: 100%;
       transition: var(--smooth);
@@ -87,7 +100,7 @@ body {
     top: calc(calc(var(--base-size) * -1) + 1px);
     width: auto;
     height: var(--base-size);
-    fill: var(--background-rgb);
+    fill: var(--background);
     filter: drop-shadow(0px -2px 2px rgb(255 255 255 / .15));
     z-index: 6;
   }
@@ -108,7 +121,7 @@ body {
   & > nav > ul {
     overflow: hidden;
     border-radius: var(--btn-border-radius);
-    background: rgb(var(--background-rgb));
+    background: rgb(var(--background));
     box-shadow: var(--box-shadow);
   }
 
@@ -117,7 +130,7 @@ body {
   }
 
   & > nav > ul li:not(:last-child) {
-    border-bottom: 1px solid var(--thin-line);
+    border-bottom: 1px solid var(--foreground-20-percent);
   }
 
   & > nav > ul li a,
@@ -128,7 +141,7 @@ body {
 
   & > nav > ul li a:hover,
   & > nav > ul > li > div:hover {
-    background: rgb(var(--foreground-rgb) / .05);
+    background: rgb(var(--foreground) / .05);
   }
 
   & > nav > ul > li > div {
@@ -141,7 +154,7 @@ body {
   & > nav > ul div.arrow {
     width: calc(var(--base-size) * .6);
     aspect-ratio: 1.25 / 1;
-    background: rgb(var(--background-rgb) / .35);
+    background: rgb(var(--background) / .35);
     clip-path: polygon(0 0, 50% 100%, 100% 0);
     transform-origin: center center;
     transition: transform var(--smooth);
@@ -152,7 +165,7 @@ body {
   }
 
   & > nav > ul > li > ul {
-    background: rgb(var(--background-rgb) / .05);
+    background: rgb(var(--background) / .05);
   }
 
   & > nav > ul > li > ul.none {
