feat(quiz-section): add scroll animation & blur effect to header and remove scrollbar

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -34,10 +34,19 @@
   --smooth: .3s;
 }
 
+::-webkit-scrollbar {
+  display: none;
+}
+
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   color: rgb(var(--foreground));
   background: rgb(var(--background));
   min-height: 100vh;
+  scrollbar-width: none;
 }
 
 button {
@@ -53,6 +62,13 @@ button {
 .main-header {
   height: var(--main-header-height);
   border-bottom: 1px solid var(--foreground-20-percent);
+  position: sticky;
+  top: 0;
+  z-index: 1;
+
+  /* blur effect */
+  -webkit-backdrop-filter: blur(var(--base-size));
+  backdrop-filter: blur(var(--base-size));
   
   & .main-header-logotype {
     width: calc(var(--base-size) * 2.5);
