--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -224,11 +224,15 @@ button {
   transform: rotate(45deg) translate(calc(var(--base-size) * -.3125), calc(var(--base-size) * -.25));
 }
 
+#hero-banner,
+#quiz-games {
+  display: flex;
+  align-items: center;
+}
+
 #hero-banner {
   background: url(https://dominiquetalis.com/images/stars.svg), radial-gradient(rgb(var(--background-alt)) -10%, rgb(var(--background)) 60%);
   height: calc(100vh - var(--main-header-height));
-  display: flex;
-  align-items: center;
 
   & h1 {
     font-size: calc(var(--base-size) * 8);
@@ -247,6 +251,10 @@ button {
     line-height: calc(var(--base-size) * 2);
     font-weight: 500;
   }
+}
+
+#quiz-games {
+  height: 100vh;
 }
 
 @layer utilities {
