feat(page): create new page to second quiz & handle database error in 'QuizResult'

--- a/src/app/quiz/quiz.module.css
+++ b/src/app/quiz/quiz.module.css
@@ -2,7 +2,16 @@
   --js-default: 12 52 8;
 
   background: url(https://dominiquetalis.com/images/stars.svg), radial-gradient(rgb(var(--js-default)) -10%, rgb(var(--background)) 60%);
+}
+
+#hero-rust {
+  --rust-default: 42 9 12;
   
+  background: url(https://dominiquetalis.com/images/stars.svg), radial-gradient(rgb(var(--rust-default)) -10%, rgb(var(--background)) 60%);
+}
+
+#hero-js,
+#hero-rust {
   & h1 {
     border-bottom: .1rem solid var(--foreground-20-percent);
   }
