refactor(button): add a dynamic route to display quiz

--- a/src/app/quiz/quiz.module.css
+++ b/src/app/quiz/quiz.module.css
@@ -1,4 +1,4 @@
-#hero-js {
+#hero-javascript {
   --js-default: 12 52 8;
 
   background: url(https://dominiquetalis.com/images/stars.svg), radial-gradient(rgb(var(--js-default)) -10%, rgb(var(--background)) 60%);
@@ -10,8 +10,15 @@
   background: url(https://dominiquetalis.com/images/stars.svg), radial-gradient(rgb(var(--rust-default)) -10%, rgb(var(--background)) 60%);
 }
 
-#hero-js,
-#hero-rust {
+#hero-kotlin {
+  --rust-default: 29 39 42;
+  
+  background: url(https://dominiquetalis.com/images/stars.svg), radial-gradient(rgb(var(--rust-default)) -10%, rgb(var(--background)) 60%);
+}
+
+#hero-javascript,
+#hero-rust,
+#hero-kotlin {
   & h1 {
     border-bottom: .1rem solid var(--foreground-20-percent);
   }
