feat(component): create Footer component & its data

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -147,7 +147,7 @@ dialog {
   width: var(--web-site-content-boundary);
 }
 
-.main-header {
+#main-header {
   height: var(--main-header-height);
   border-bottom: .1rem solid var(--foreground-20-percent);
   position: sticky;
