refactor(footer): WIP - create & insert social media icons

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -386,6 +386,15 @@ dialog {
   }
 }
 
+.social-media-links {
+  opacity: .3;
+  transition: opacity var(--smooth);
+}
+
+.social-media-links:hover {
+  opacity: .8;
+}
+
 @layer utilities {
   .text-balance {
     text-wrap: balance;
