feat(login): WIP - create login page & its components

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -318,7 +318,8 @@ dialog {
   align-items: center;
 }
 
-.hero-quiz {
+.hero-quiz,
+.user-login {
   height: calc(100vh - var(--main-header-height));
 }
 
