--- a/src/app/login/login.module.css
+++ b/src/app/login/login.module.css
@@ -1,4 +1,5 @@
 #form-login-container {
+  width: clamp(calc(var(--base-size) * 18.75), 100%, calc(var(--base-size) * 30));
   margin: auto;
   border-radius: calc(var(--base-size) * 1.5);
   border: .1rem solid var(--foreground-20-percent);
@@ -6,6 +7,7 @@
   & h1 {
     font-size: calc(var(--base-size) * 2.5);
     text-align: center;
+    line-height: calc(var(--base-size) * 3.5);
     border-bottom: .1rem solid var(--foreground-20-percent);
   }
   
@@ -16,12 +18,24 @@
       flex-direction: column;
       gap: calc(var(--base-size) * .5);
     }
-    
-    & input {
-      padding: var(--base-size);
-      background: none;
+
+    & label > div {
+      display: flex;
+      gap: calc(var(--base-size) * .5);
+      padding: calc(var(--base-size) * .5);
       border-radius: calc(var(--base-size) * .375);
       border: .1rem solid var(--foreground-20-percent);
+    }
+    
+    & input {
+      font-size: var(--base-size);
+      width: 100%;
+    }
+    
+    & input,
+    & input:focus {
+      outline: none;
+      background: none;
     }
 
     & button {
