feat(component): create deconnexion button & improve navbar item type

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -70,7 +70,14 @@ h3 {
 
 button {
   transition: background var(--smooth);
+}
+
+button:not([data-user=deconnexion]) {
   font-size: calc(var(--base-size) * 1.25);
+}
+
+button[data-user=deconnexion] {
+  text-align: left;
 }
 
 dialog {
@@ -243,8 +250,16 @@ dialog {
     box-shadow: var(--box-shadow);
   }
 
-  & > nav > ul li a {
+  & > nav > ul li a,
+  & > nav > ul li form > button {
     transition: all var(--smooth);
+  }
+
+  & > nav > ul li form > button {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    gap: calc(var(--base-size) * .5);
   }
 
   & > nav > ul li:not(:last-child) {
@@ -254,10 +269,16 @@ dialog {
   & > nav > ul li a,
   & > nav > ul > li > div {
     display: block;
+  }
+  
+  & > nav > ul li a,
+  & > nav > ul li form > button,
+  & > nav > ul > li > div {
     padding: calc(var(--base-size) * .5) calc(var(--base-size) * 1.25);
   }
-
+  
   & > nav > ul li a:hover,
+  & > nav > ul li form > button:hover,
   & > nav > ul > li > div:hover {
     background: rgb(var(--foreground) / .05);
   }
