feat(component): create a user details page & its main component

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -344,7 +344,8 @@ dialog {
 
 .hero-quiz,
 .user-login,
-.not-found {
+.not-found,
+.user-details {
   height: calc(100vh - var(--main-header-height));
 }
 
