refactor(quiz): improve quiz section height on small screen

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -344,7 +344,7 @@ dialog {
 .hero-quiz,
 .user-login,
 .not-found {
-  height: calc(100vh - var(--main-header-height));
+  min-height: calc(100vh - var(--main-header-height));
 }
 
 .user-details {
