refactor(hero-banner): move text in the section center

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -353,7 +353,8 @@ dialog {
 
 #hero-banner {
   background: url(/img/stars.svg), radial-gradient(rgb(var(--background-alt)) -10%, rgb(var(--background)) 60%);
-
+  display: flex;
+  
   & h1 {
     font-size: calc(var(--base-size) * 5);
     font-weight: 700;
